Enable selecting bubble sort algorithm

--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
   <header class="topbar">
     <h1>VisuDSA <span class="badge">starter</span></h1>
     <nav>
-      <select id="algoSelect" aria-label="Algorithm">
-        <option value="insertionSort">Insertion Sort</option>
-      </select>
+      <select id="algoSelect" aria-label="Algorithm"></select>
       <button id="randomBtn" title="Randomize input">🎲 Random</button>
       <input id="arrayInput" value="5,2,9,1,5,6" aria-label="Array input (comma-separated)" />
       <button id="loadBtn">Load</button>
