--- a/index.html
+++ b/index.html
@@ -10,16 +10,24 @@
   <header class="topbar">
     <h1>VisuDSA <span class="badge">starter</span></h1>
     <nav>
+      <label for="algoType">Algorithm Type:</label>
+      <select id="algoType" aria-label="Algorithm Type">
+        <option value="sorting">Sorting</option>
+        <option value="searching">Searching</option>
+      </select>
       <select id="algoSelect" aria-label="Algorithm"></select>
       <button id="randomBtn" title="Randomize input">🎲 Random</button>
       <input id="arrayInput" value="5,2,9,1,5,6" aria-label="Array input (comma-separated)" />
       <button id="loadBtn">Load</button>
+      <label for="searchTarget" id="searchTargetLabel" style="display: none;">Target:</label>
+      <input id="searchTarget" type="number" value="5" style="display: none;" aria-label="Search target" />
     </nav>
   </header>
 
   <main class="grid">
     <section class="panel" id="vizPanel" aria-label="Visualization">
       <div id="visual"></div>
+      <div id="searchVisual" style="display: none;"></div>
       <div class="controls">
         <button id="firstBtn">⏮ First</button>
         <button id="prevBtn">◀ Prev</button>
