Added Time Complexity table

--- a/index.html
+++ b/index.html
@@ -54,6 +54,21 @@
     <section class="panel code" aria-label="Code">
       <div class="panel-title">Pseudocode</div>
       <pre id="codePane"><code></code></pre>
+      <div class="panel-sub">
+        <div class="panel-title">Recursion Analysis</div>
+        <table class="analysis">
+          <thead>
+            <tr>
+              <th>Level</th>
+              <th>Arg size</th>
+              <th>TC of 1 node</th>
+              <th>Nodes/level</th>
+              <th>Level TC</th>
+            </tr>
+          </thead>
+          <tbody id="analysisBody"></tbody>
+        </table>
+      </div>
     </section>
 
     <section class="panel" aria-label="Complexity">
