fixed collapsing menu and BST layout on mobile

--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
           Speed:
           <input id="speedRange" type="range" min="100" max="1500" step="50" value="600">
         </label>
+        <label id="bstFitWrap" class="speed" style="display:none">
+          <input type="checkbox" id="bstFitToggle"> Fit tree
+        </label>
         <span id="stepCounter" class="muted" aria-live="polite">Step 0/0</span>
       </div>
     </section>
