fixed the standard view for BST

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
         <label id="bstFitWrap" class="speed" style="display:none">
           <input type="checkbox" id="bstFitToggle"> Fit tree
         </label>
+        <button id="bstResetBtn" style="display:none">Reset view</button>
         <span id="stepCounter" class="muted" aria-live="polite">Step 0/0</span>
       </div>
     </section>
