made edits to input labels for clarity

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <section class="panel inputs-panel" aria-label="Inputs">
       <div class="inputs-header">
         <div class="panel-title">Inputs</div>
-  <button id="inputsToggle" class="inputs-toggle" aria-expanded="true" aria-controls="inputsBody" title="Collapse inputs">⌄</button>
+        <div class="inputs-hint" id="inputsHint">Tap to open menu</div>
+        <button id="inputsToggle" class="inputs-toggle" aria-expanded="true" aria-controls="inputsBody" title="Collapse inputs">⌄</button>
       </div>
       <div class="inputs-body" id="inputsBody">
         <div class="inputs-row">
