--- a/index.html
+++ b/index.html
@@ -104,6 +104,10 @@
       <pre id="codePane"><code></code></pre>
       <div class="panel-sub">
         <div class="panel-title">Recursion Analysis</div>
+        <div id="analysisSummary" class="analysis-summary" style="display:none;">
+          <span class="summary-label">Total Time Complexity:</span>
+          <span id="analysisBigO" class="summary-value" aria-live="polite"></span>
+        </div>
         <div class="analysis-controls" id="analysisControls" style="display:none;">
           <span id="analysisModeWrap">
             <label for="analysisMode">Mode:</label>
